# okf-tasks

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  SPEC.md  package-lock.json  package.json  pyproject.toml  repo-admin.json
.github/: CODEOWNERS  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: spec-proposal.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
conformance/: README.md  export-manifest.json  generate_fixtures.py  manifest.json  transitions.json  visualization-manifest.json
docs/: CLI_SETUP.md  COMBINED_WORKSPACE_VISUALIZATION.md  TRACKER_INTEGRATION.md  VISUALIZATION.md  VISUALIZATION_GUIDE.md
examples/architecture-knowledge-base/: README.md
examples/architecture-knowledge-base/tasks/: index.md
examples/combined-delivery-architecture/: README.md
examples/combined-delivery-architecture/docs/: customer-experience.md  (+3 more)
examples/complex-task-portfolio/: README.md
examples/knowledge-linked/: README.md
examples/project-docs/: README.md
examples/standalone/: README.md
examples/tracker-synchronised/: README.md
examples/visualization/: README.md  combined-workspace.html
implementations/typescript/: tsconfig.json
schemas/: task.schema.json  time-entry.schema.json  tracker-profile.schema.json  workstream.schema.json
scripts/: check_release.py  generate_complex_examples.py  generate_local_docs.py  visualize_bundle.py  visualizer_template.html
skills/okf-task-lifecycle/: SKILL.md
tests/: test_okf_tasks.py  test_packaging.py  test_visualize_bundle.py
(+232 files in other folders)
