[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "okf-tasks"
version = "0.1.0"
description = "An OKF profile and reference implementation for portable task records"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]
license = "Apache-2.0"

[project.scripts]
okf-tasks = "okf_tasks:main"

[tool.setuptools]
py-modules = ["okf_tasks"]

[tool.setuptools.package-dir]
"" = "skills/okf-task-lifecycle/scripts"

[tool.pytest.ini_options]
testpaths = ["tests"]
